# f1_race_strategy_predictive_model

./: .gitignore  .vercelignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: vercel-deploy.yml
configs/: mclaren_2025.yaml  redbull_2025.yaml
docs/: DASHBOARD_GUIDE.md  F1_Website_Model_Guide.docx  F1_Website_Model_Guide.html  F1_Website_Model_Guide.txt  LOCKED_RUN_GUIDE.md  PROJECT_PLAYBOOK.md  VERCEL_DEPLOY.md
scripts/: export_static_site.py  process_video.py  run_demo.py  run_locked_dashboard.py  run_realdata_locked.py  run_season_pipeline.py
site/: index.html  vercel.json
site/data/: payload.json
src/f1_strategy_lab/: __init__.py  cli.py  pipeline.py
src/f1_strategy_lab/config/: settings.py
src/f1_strategy_lab/cv/: track_state.py
src/f1_strategy_lab/dashboard/: __init__.py  server.py
src/f1_strategy_lab/data/: fastf1_pipeline.py  synthetic.py  weather.py
src/f1_strategy_lab/features/: feature_builder.py
src/f1_strategy_lab/models/: contingency_ranker.py  pace_model.py
src/f1_strategy_lab/strategy/: championship.py  contingency.py  simulator.py
src/f1_strategy_lab/utils/: io.py  lock.py
tests/: test_contingency_ranker.py  test_dashboard_server.py  test_lock_snapshot.py  test_model.py  test_pipeline.py  test_simulator.py
